# aegis-engine

./: .dockerignore  .gitignore  CI_CD.md  DEPLOYMENT.md  LICENSE  README.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
build_test/: CTestTestfile.cmake  aegis_engine  test_iso_parser  test_iso_parser[1]_include.cmake  test_iso_parser[1]_tests.cmake  test_ring_buffer  test_ring_buffer[1]_include.cmake  test_ring_buffer[1]_tests.cmake
config/: model_weights.json  zkp_db_schema.sql
deploy/: Dockerfile  docker-compose.monitoring.yml  docker-compose.yml
docs/: COMPILATION.md
docs/adr/: 001-ipc-mechanism.md  002-zkp-library-selection.md  003-polymorphic-build-strategy.md  004-secrets-management.md  005-post-quantum-security.md  README.md
monitoring/: alertmanager.yaml  alerts.yaml  grafana-dashboard.json  prometheus.yaml
monitoring/grafana-provisioning/dashboards/: default.yaml
proto/: aegis.proto
src/cpp/: CMakeLists.txt  hft_core.hpp  kafka_ingress.hpp  main.cpp  metrics.hpp  risk_engine.hpp  rules_loader.hpp  telemetry.hpp  trusted_setup.cpp  zkp_circuits.hpp  zkp_prover.cpp  zkp_verifier.cpp
src/cpp/cmake/: FindGMP.cmake
src/cpp/tests/cpp/: test_iso_parser.cpp  test_ring_buffer.cpp
src/python/: __init__.py
src/python/aegis/: __init__.py  ai_bridge.py  anchor_service.py  blockchain_audit.py  consortium_ledger.py  consortium_node.py  db_provider.py  digital_analyst.py  enterprise_logger.py  eu_id_wallet.py  external_adapters.py  license_manager.py  metrics.py  rules_engine.py  secrets_provider.py  zkp_db.py
src/python/tools/: __init__.py  cpp_launcher.py  dashboard.py  generate_model.py  pkyc_feed.py  train_phenotypes.py  train_risk_model.py
src/zkp/: zkp_circuits.hpp  zkp_prover.cpp
tests/: stress_test.py
tests/python/: test_digital_analyst.py
